unpackaged/main/default/objects/ServiceAppointment/fields/Spotted_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Spotted_Timestamp__c</fullName>
    <label>Spotted Timestamp</label>
    <type>DateTime</type>
</CustomField>