unpackaged/main/default/objects/ServiceAppointment/fields/State_Lightbox__c.field-meta.xml
<CustomField>
    <fullName>State_Lightbox__c</fullName>
    <formula>State</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>