unpackaged/main/default/objects/ServiceAppointment/fields/Street_Lightbox__c.field-meta.xml
<CustomField>
    <fullName>Street_Lightbox__c</fullName>
    <formula>Street &amp; &quot;, &quot; &amp; City &amp; &quot;, &quot; &amp; State &amp; &quot; &quot; &amp;  PostalCode</formula>
    <label>Street</label>
    <type>Text</type>
</CustomField>