unpackaged/main/default/objects/ServiceAppointment/fields/System_Auto_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>System_Auto_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Auto Scheduled</label>
    <type>Checkbox</type>
</CustomField>