unpackaged/main/default/objects/ServiceAppointment/fields/T_Code__c.field-meta.xml
<CustomField>
    <fullName>T_Code__c</fullName>
    <formula>Work_Order__r.T_Code__c</formula>
    <label>T-Code</label>
    <type>Text</type>
</CustomField>