unpackaged/main/default/objects/ServiceAppointment/fields/Technician_Schedule_Override_Counter__c.field-meta.xml
<CustomField>
    <fullName>Technician_Schedule_Override_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Technician Schedule Override Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>