unpackaged/main/default/objects/ServiceAppointment/fields/Technology_Preference__c.field-meta.xml
<CustomField>
    <fullName>Technology_Preference__c</fullName>
    <formula>TEXT(ServiceTerritory.Dispatch_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technology Preference</label>
    <type>Text</type>
</CustomField>