unpackaged/main/default/objects/ServiceAppointment/fields/Third_Party_Driver__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party Service Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Third_Party_Driver</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Appointments (Third Party Driver)</relationshipLabel>
    <relationshipName>Driver_Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>