unpackaged/main/default/objects/ServiceAppointment/fields/Total_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Total_Mileage__c</fullName>
    <formula>Work_Order__r.Total_Mileage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>