unpackaged/main/default/objects/ServiceAppointment/fields/Tow_Destination__c.field-meta.xml
<CustomField>
    <fullName>Tow_Destination__c</fullName>
    <formula>IF(
 AND(
  Subject=&quot;Breakdown Appointment&quot;,
  FSL__Related_Service__c &lt;&gt; null
 ), 
 IF(NOT(ISBLANK(FSL__Related_Service__r.Landmark__c)),
  FSL__Related_Service__r.Landmark__c &amp; &quot;, &quot;,
  NULL
 )
 &amp;  FSL__Related_Service__r.Street &amp; &quot;, &quot; &amp; FSL__Related_Service__r.City &amp; &quot;, &quot; &amp; FSL__Related_Service__r.State &amp;  &quot;, &quot; &amp; FSL__Related_Service__r.PostalCode ,
 NULL
)</formula>
    <label>Tow Destination</label>
    <type>Text</type>
</CustomField>