unpackaged/main/default/objects/ServiceAppointment/fields/Tow_Loaded_Violation_Check__c.field-meta.xml
<CustomField>
    <fullName>Tow_Loaded_Violation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tow Loaded Violation Check</label>
    <type>Checkbox</type>
</CustomField>