unpackaged/main/default/objects/ServiceAppointment/fields/Tow_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Tow_Mileage__c</fullName>
    <formula>IF( Work_Order__r.Is_Tow_WorkType__c = true,

DISTANCE(

GEOLOCATION(
IF (Latitude = 0,
D3_Address_Geocode__Latitude__s,Latitude ),

IF (Longitude = 0,
D3_Address_Geocode__Longitude__s, Longitude)),

GEOLOCATION(
IF(FSL__Related_Service__r.Latitude = 0,
FSL__Related_Service__r.D3_Address_Geocode__Latitude__s,FSL__Related_Service__r.Latitude ),

IF(FSL__Related_Service__r.Longitude = 0,
FSL__Related_Service__r.D3_Address_Geocode__Longitude__s, FSL__Related_Service__r.Longitude ))

,&#39;mi&#39; ),

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tow Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>