unpackaged/main/default/objects/ServiceAppointment/fields/Tow_Store__c.field-meta.xml
<CustomField>
    <fullName>Tow_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tow &amp; Store</label>
    <type>Checkbox</type>
</CustomField>