unpackaged/main/default/objects/ServiceAppointment/fields/Tracker_Assigned_Resource_Contact_old__c.field-meta.xml
<CustomField>
    <fullName>Tracker_Assigned_Resource_Contact_old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tracker Assigned Resource Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Appointments (Those Assigned to Resource)</relationshipLabel>
    <relationshipName>Service_Appointments_old</relationshipName>
    <type>Lookup</type>
</CustomField>