unpackaged/main/default/objects/ServiceAppointment/fields/Tracker_Resource__c.field-meta.xml
<CustomField>
    <fullName>Tracker_Resource__c</fullName>
    <formula>IF(Service_Resource__r.Tracker_Contact__c != NULL,TRUE,FALSE)</formula>
    <label>Tracker Resource</label>
    <type>Checkbox</type>
</CustomField>