unpackaged/main/default/objects/ServiceAppointment/fields/Tracker_SA__c.field-meta.xml
<CustomField>
    <fullName>Tracker_SA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE /Checked if the SA is to be assigned to a Landline Service Resource with a Tracker Contact.</description>
    <inlineHelpText>TRUE /Checked if the SA is to be assigned to a Landline Service Resource with a Tracker Contact.</inlineHelpText>
    <label>Tracker SA</label>
    <type>Checkbox</type>
</CustomField>