unpackaged/main/default/objects/ServiceAppointment/fields/Tracker_StartTime__c.field-meta.xml
<CustomField>
    <fullName>Tracker_StartTime__c</fullName>
    <label>Tracker StartTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>