unpackaged/main/default/objects/ServiceAppointment/fields/Travel_to_Tow_Destination__c.field-meta.xml
<CustomField>
    <fullName>Travel_to_Tow_Destination__c</fullName>
    <label>Travel to Tow Destination</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>