unpackaged/main/default/objects/ServiceAppointment/fields/Unattended_Tow__c.field-meta.xml
<CustomField>
    <fullName>Unattended_Tow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unattended Tow</label>
    <type>Checkbox</type>
</CustomField>