unpackaged/main/default/objects/ServiceAppointment/fields/usedEmergencyPolicy__c.field-meta.xml
<CustomField>
    <fullName>usedEmergencyPolicy__c</fullName>
    <formula>If(ISPICKVAL(Work_Order__r.Priority, &#39;Critical&#39;), TRUE, FALSE)</formula>
    <label>usedEmergencyPolicy</label>
    <type>Checkbox</type>
</CustomField>