unpackaged/main/default/objects/ServiceAppointment/fields/usedHighPolicy__c.field-meta.xml
<CustomField>
    <fullName>usedHighPolicy__c</fullName>
    <formula>If(ISPICKVAL(Work_Order__r.Priority, &#39;High&#39;), TRUE, FALSE)</formula>
    <label>usedHighPolicy</label>
    <type>Checkbox</type>
</CustomField>