unpackaged/main/default/objects/ServiceAppointment/fields/usedNormalPolicy__c.field-meta.xml
<CustomField>
    <fullName>usedNormalPolicy__c</fullName>
    <formula>If(ISPICKVAL(Work_Order__r.Priority, &#39;Medium&#39;), TRUE, FALSE)</formula>
    <label>usedNormalPolicy</label>
    <type>Checkbox</type>
</CustomField>