unpackaged/main/default/objects/ServiceAppointment/fields/WO_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>WO_Call_Type__c</fullName>
    <formula>Work_Order__r.Call_Type__c</formula>
    <label>Call Type</label>
    <type>Text</type>
</CustomField>