unpackaged/main/default/objects/ServiceAppointment/fields/Work_Order_Priority__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Priority__c</fullName>
    <label>Work Order Priority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>