unpackaged/main/default/objects/ServiceAppointment/fields/ZIP_Code_For_Coverage_Lookup__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Code_For_Coverage_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip Code For Coverage</label>
    <referenceTo>Zip_Code__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>