unpackaged/main/default/objects/ServiceAppointment/fields/Zip_Lightbox__c.field-meta.xml
<CustomField>
    <fullName>Zip_Lightbox__c</fullName>
    <formula>PostalCode</formula>
    <label>Zip</label>
    <type>Text</type>
</CustomField>