unpackaged/main/default/objects/ServiceAppointment/recordTypes/Breakdown.recordType-meta.xml
<RecordType>
    <fullName>Breakdown</fullName>
    <active>true</active>
    <label>Breakdown</label>
</RecordType>