unpackaged/main/default/objects/ServiceAppointment/recordTypes/Tow.recordType-meta.xml
<RecordType>
    <fullName>Tow</fullName>
    <active>true</active>
    <label>Tow</label>
</RecordType>