unpackaged/main/default/objects/ServiceAppointment/validationRules/Check_Tow_Appointment_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Tow_Appointment_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	RecordType.Name = &#39;Tow&#39;,
	OR(
		ISPICKVAL( Status, &#39;En Route&#39;),
		ISPICKVAL( Status, &#39;On Location&#39;),
		ISPICKVAL( Status, &#39;Tow Loaded&#39;),
		AND(
			ISPICKVAL( Status, &#39;Dispatched&#39;),
			NOT( OR(
				ISPICKVAL(FSL__Related_Service__r.Status, &#39;Dispatched&#39;),
				ISPICKVAL(FSL__Related_Service__r.Status, &#39;En Route&#39;),
				ISPICKVAL(FSL__Related_Service__r.Status, &#39;On Location&#39;)
				)
			)
		)
	)
)</errorConditionFormula>
    <errorMessage>That is not a valid status for a Tow appointment. Please update status on the Breakdown Appointment.</errorMessage>
</ValidationRule>