unpackaged/main/default/objects/ServiceAppointment/validationRules/Community_Unschedule_Violation.validationRule-meta.xml
<ValidationRule>
    <fullName>Community_Unschedule_Violation</fullName>
    <active>false</active>
    <description>Prevent users without &quot;Allow to schedule before earliest start&quot; custom permission from unscheduling calls.</description>
    <errorConditionFormula>$Permission.Allow_Unschedule = FALSE &amp;&amp;
(ISPICKVAL(Status,&#39;Spotted&#39;) &amp;&amp; ISCHANGED(Status))</errorConditionFormula>
    <errorMessage>Unscheduling appointments is not permitted. Please contact AAA dispatch if you need to decline a call.</errorMessage>
</ValidationRule>