unpackaged/main/default/objects/ServiceAppointment/validationRules/FSL_Resolution_Code_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL_Resolution_Code_Required</fullName>
    <active>true</active>
    <description>Requires Resolution Code to be selected before a call can be cleared.</description>
    <errorConditionFormula>AND(ISCHANGED(Status ), TEXT(Status) == &#39;Cleared&#39;, ISBLANK(TEXT(Resolution_Code__c)))</errorConditionFormula>
    <errorMessage>A Resolution Code is required to Clear the Call</errorMessage>
</ValidationRule>