unpackaged/main/default/objects/ServiceAppointment/validationRules/Postal_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_Code_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(Country = &quot;UNITED STATES&quot;, Country = &quot;USA&quot;, Country = &quot;US&quot;), NOT(ISBLANK(PostalCode)),NOT(ISNUMBER(  PostalCode  )) )</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Please Input only Numbers in Postalcode For USA Citizens</errorMessage>
</ValidationRule>