unpackaged/main/default/objects/ServiceAppointment/validationRules/Prevent_Manual_Dispatch.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Manual_Dispatch</fullName>
    <active>true</active>
    <description>Prevent scheduling of calls for Dispatcher profile users without the Schedule Custom Permission.</description>
    <errorConditionFormula>AND(
OR($User.ProfileId = &#39;00e1U000002OGJG&#39;),
NOT($Permission.FSL__Schedule)
)</errorConditionFormula>
    <errorMessage>You do not have the proper permissions to override scheduled appointments.</errorMessage>
</ValidationRule>