unpackaged/main/default/objects/ServiceAppointment/validationRules/Related_Service_with_time_dependency_byp.validationRule-meta.xml
<ValidationRule>
    <fullName>Related_Service_with_time_dependency_byp</fullName>
    <active>true</active>
    <description>If related service is not empty then time dependency is not empty, bypassed for skip automation logic permission</description>
    <errorConditionFormula>NOT( $Permission.Skip_Automation_Logic ) &amp;&amp; ( !ISBLANK(FSL__Related_Service__c) &amp;&amp; ( ISBLANK(TEXT(FSL__Time_Dependency__c)) &amp;&amp; !FSL__Same_Day__c &amp;&amp; !FSL__Same_Resource__c ) )</errorConditionFormula>
    <errorMessage>Select a valid dependency type. If the appointments must be assigned to the same resource, the dependency type can’t be Same Start.</errorMessage>
</ValidationRule>