unpackaged/main/default/objects/ServiceAppointment/validationRules/Restrict_assignment_to_one_resource_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_assignment_to_one_resource_only</fullName>
    <active>true</active>
    <errorConditionFormula>Assigned_Resource_count__c &gt; 1</errorConditionFormula>
    <errorMessage>Service appointment can be assigned to one resource only</errorMessage>
</ValidationRule>