unpackaged/main/default/objects/ServiceAppointment/validationRules/SA_Read_Only_On_Cleared.validationRule-meta.xml
<ValidationRule>
    <fullName>SA_Read_Only_On_Cleared</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Status),&quot;Cleared&quot;), NOT($Profile.Name=&quot;System Administrator&quot;))</errorConditionFormula>
    <errorMessage>Service Appointment cannot be updated after status is set to Cleared</errorMessage>
</ValidationRule>