unpackaged/main/default/objects/ServiceAppointment/validationRules/Same_Resource_Same_Start_byp.validationRule-meta.xml
<ValidationRule>
    <fullName>Same_Resource_Same_Start_byp</fullName>
    <active>true</active>
    <description>Can&#39;t be same start and same reosurce, bypassed for Skip Automation Logic permission</description>
    <errorConditionFormula>NOT( $Permission.Skip_Automation_Logic ) &amp;&amp; TEXT(FSL__Time_Dependency__c) = &quot;Same Start&quot; &amp;&amp; FSL__Same_Resource__c</errorConditionFormula>
    <errorMessage>Resource dependency is invalid. Time Dependency can&#39;t be Same Start when same resource is required.</errorMessage>
</ValidationRule>