unpackaged/main/default/objects/ServiceAppointment/validationRules/Schedule_Time_Cannot_Precede_NOW.validationRule-meta.xml
<ValidationRule>
    <fullName>Schedule_Time_Cannot_Precede_NOW</fullName>
    <active>true</active>
    <errorConditionFormula>$Permission.Allow_to_schedule_before_earliest_start = FALSE &amp;&amp; ISCHANGED( SchedStartTime) &amp;&amp; SchedStartTime &lt; (NOW()-(5/1440))</errorConditionFormula>
    <errorMessage>Scheduled Start cannot precede current time.</errorMessage>
</ValidationRule>