unpackaged/main/default/objects/ServiceAppointment/validationRules/Time_dependency_with_related_service_byp.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_dependency_with_related_service_byp</fullName>
    <active>true</active>
    <description>Clone of standard FSL rule with bypass for integration user</description>
    <errorConditionFormula>NOT( $Permission.Skip_Automation_Logic ) &amp;&amp; ( ISBLANK(FSL__Related_Service__c) &amp;&amp; ( !ISBLANK(TEXT(FSL__Time_Dependency__c)) ||  FSL__Same_Day__c || FSL__Same_Resource__c ) )</errorConditionFormula>
    <errorDisplayField>FSL__Related_Service__c</errorDisplayField>
    <errorMessage>Please select Related Service.</errorMessage>
</ValidationRule>