unpackaged/main/default/objects/ServiceAppointment/listViews/AAA_NE_Active_Call_Green_Lower_Fairfield.listView-meta.xml
<ListView>
    <fullName>AAA_NE_Active_Call_Green_Lower_Fairfield</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 OR 5 OR 6)</booleanFilter>
    <columns>Work_Order_Priority__c</columns>
    <columns>Work_Order__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>Service_Resource_Name__c</columns>
    <columns>Age__c</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <columns>PTA__c</columns>
    <columns>SchedStartTime</columns>
    <columns>En_Route_Timestamp__c</columns>
    <columns>On_Location_Timestamp__c</columns>
    <columns>FSL_Street_City__c</columns>
    <columns>Tow_Mileage__c</columns>
    <columns>WorkType</columns>
    <columns>Tow_Destination__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>contains</operation>
        <value>Declined,Spotted,Scheduled,Dispatched,En Route,On Location,Tow Loaded,In Tow,Tow Complete,Canceled</value>
    </filters>
    <filters>
        <field>CreatedDate</field>
        <operation>greaterThan</operation>
        <value>11/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>isBreakdown__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Parent_Territory_ID__c</field>
        <operation>equals</operation>
        <value>0HhJx0000000Fwl</value>
    </filters>
    <filters>
        <field>ServiceTerritory</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ServiceTerritory</field>
        <operation>equals</operation>
        <value>Towbook Reroute,H100,Nor1,Nor2</value>
    </filters>
    <label>Green Lower Fairfield</label>
    <sharedTo>
        <role>Club_Dispatcher</role>
        <role>Dispatcher_Supervisor</role>
        <role>System_Admin</role>
    </sharedTo>
</ListView>