unpackaged/main/default/objects/ServiceAppointment/listViews/AAA_NE_SHOP_VIEW_PB3_ACTIVE_CALLS_COPY.listView-meta.xml
<ListView>
    <fullName>AAA_NE_SHOP_VIEW_PB3_ACTIVE_CALLS_COPY</fullName>
    <columns>Work_Order__c</columns>
    <columns>Name</columns>
    <columns>CreatedDate</columns>
    <columns>SchedStartTime</columns>
    <columns>Age__c</columns>
    <columns>Work_Order_Priority__c</columns>
    <columns>Status</columns>
    <columns>State_Lightbox__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>Service_Resource__c</columns>
    <columns>T_Code__c</columns>
    <columns>CITY</columns>
    <columns>FSL_Street_City__c</columns>
    <columns>Tow_Destination__c</columns>
    <columns>Tow_Mileage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Resource__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>CreatedDate</field>
        <operation>greaterThan</operation>
        <value>6/23/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>contains</operation>
        <value>Declined,Spotted,Scheduled,Dispatched,En Route,On Location,Tow Loaded,In Tow,Tow Complete</value>
    </filters>
    <filters>
        <field>isBreakdown__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Facility_Number__c</field>
        <operation>notEqual</operation>
        <value>996,y1050</value>
    </filters>
    <filters>
        <field>State_Lightbox__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Work_Order__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Facility_Number__c</field>
        <operation>contains</operation>
        <value>p900</value>
    </filters>
    <filters>
        <field>T_Code__c</field>
        <operation>contains</operation>
    </filters>
    <label>AAA NE SHOP VIEW PB3 - ACTIVE CALLS COPY</label>
    <sharedTo>
        <role>System_Admin</role>
    </sharedTo>
</ListView>