unpackaged/main/default/objects/ServiceAppointment/listViews/Active_Calls_Green_CT_FLeet.listView-meta.xml
<ListView>
    <fullName>Active_Calls_Green_CT_FLeet</fullName>
    <booleanFilter>1 AND 2 AND 4 AND 3</booleanFilter>
    <columns>D3_Call_ID__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Work_Order_Priority__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>CreatedDate</columns>
    <columns>PTA__c</columns>
    <columns>SchedStartTime</columns>
    <columns>Status</columns>
    <columns>On_Location_Timestamp__c</columns>
    <columns>T_Code__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>FSL_Street_City__c</columns>
    <columns>Tow_Mileage__c</columns>
    <columns>FSL_Member_Vehicle_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>contains</operation>
        <value>Declined,Spotted,Scheduled,Dispatched,En Route,On Location,Tow Loaded,In Tow,Tow Complete,Canceled</value>
    </filters>
    <filters>
        <field>CreatedDate</field>
        <operation>greaterThan</operation>
        <value>2/1/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>Parent_Territory_ID__c</field>
        <operation>equals</operation>
        <value>0HhJx0000000Hgn</value>
    </filters>
    <filters>
        <field>isBreakdown__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Green CT FLeet</label>
    <sharedTo>
        <role>Club_Dispatcher</role>
        <role>Dispatcher_Supervisor</role>
        <role>System_Admin</role>
    </sharedTo>
</ListView>